--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <header class="custom-header">
         <nav class="navbar fixed-top bg-transparent custom-nav">
             <div class="container-fluid justify-content-end">
-                <!-- Burger Button --> <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                <!-- Burger Button --> 
+                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <!-- Menü -->
+                    aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> 
+                </button> 
+                
+                <!-- Menü -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav text-end ">
                         <li class="nav-item"><a class="nav-link" href="#home">HOME</a></li>
